--- a/source/java/admin-webapp/src/scripts/directives/widgets/tooltip/_tooltip.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/tooltip/_tooltip.scss
@@ -8,7 +8,8 @@
     z-index: 1000;
     
     .tooltip-body {
-        background-color: transparent;
+        background-color: transparent !important;
+        color: black !important;
     }
     
     .left-side {
