FS-706: Add tunable write failure fault injection to ObjectStore.

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -216,6 +216,9 @@ fds: {
         objectstore: {
             /* Size of the hashed task synchronizer */
             synchronizer_size = 100
+            faults: {
+                fail_writes = 0.0
+            }
         }
         cache: {
             /* Default max number of data cache entries */
