Revert "Merge pull request #849 from FDS-Dev/release_build_package"
This reverts commit ab064df854638ec29af77d7ef79adce14c64e11f, reversing
changes made to 57c98593dbd73a775c2c0a8acb57c793cfc2ad0d.

--- a/source/test/formation.conf.j2
+++ b/source/test/formation.conf.j2
@@ -14,7 +14,7 @@ password        = {{ ssh_password }}
 #
 
 {% for host in groups[group_names[0]] %}
-{% if hostvars[host]['node_num'] is defined %}
+{% if node_num is defined %}
 [node{{ hostvars[host]['node_num'] }}] 
 {% else %}
 [node01] 
@@ -32,7 +32,7 @@ fds_root        = /fds
 [sh1]
 # Client uses blk services
 blk             = false
-{% if hostvars[om_host]['node_num'] is defined %}
+{% if node_num is defined %}
 fds_node        = node{{ hostvars[om_host]['node_num'] }}
 {% else %}
 fds_node        = node01
