--- a/source/java/admin-webapp/src/styles/sass/_base.scss
+++ b/source/java/admin-webapp/src/styles/sass/_base.scss
@@ -1,11 +1,27 @@
 body {
-  //font: 13px/1.5 "Helvetica Neue", Arial, Helvetica, Sans-Serif;
+  font: 13px/1.5 "Helvetica Neue", Arial, Helvetica, Sans-Serif;
   background-color: #444;
   color: $default_text_color;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   margin: 0px;
   font-size: 1.4em;
+}
+
+::-webkit-input-placeholder { 
+    color: $placeholder_color; 
+}
+
+::-moz-placeholder { 
+    color: $placeholder_color;
+} /* firefox 19+ */
+
+:-ms-input-placeholder { 
+    color: $placeholder_color;
+} /* ie */
+
+input:-moz-placeholder { 
+    color: $placeholder_color;
 }
 
 /* Thanks, Paul. */
@@ -181,8 +197,8 @@ input.form-control {
     }
 
     &.skinny {
-        padding-top: 4px;
-        padding-bottom: 4px;
+        padding-top: 5.5px;
+        padding-bottom: 5.5px;
     }
 }
 
