--- a/source/java/admin-webapp/src/styles/sass/_variables.scss
+++ b/source/java/admin-webapp/src/styles/sass/_variables.scss
@@ -8,6 +8,7 @@ $default_text_color: black;
 $text_light_color: #3A3A3A;
 $text_very_light_color: #A0A0A0;
 $text_link_color: #0079FF;
+$placeholder_color: #CCCCCC;
 
 $gray_border: #CCCCCC;
 $dark_border: #444444;
