disabling ability to change the tiering policy for a volume

--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -76,7 +76,7 @@
     </section>
     
     <section class="block-section">
-        <tiering-panel ng-model="mediaPolicy"></tiering-policy-panel>
+        <tiering-panel ng-model="mediaPolicy" disabled="disableTiering"></tiering-policy-panel>
     </section>
     
     <section class="block-section">
