--- a/source/java/admin-webapp/src/scripts/directives/widgets/buttonbar/_buttonbar.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/buttonbar/_buttonbar.scss
@@ -18,7 +18,7 @@ $buttonbar_border_radius: 5px;
         border: 1px solid $button_primary_border;
         border-right-width: 0px;
         
-        &:hover {
+        &.hover {
             background-color: $button_primary_hover;
             color: white;
         }
@@ -38,5 +38,13 @@ $buttonbar_border_radius: 5px;
             background-color: $button_primary;
             color: white;
         }
+    }
+    
+    .veil {
+        pointer-events: none;
+        background-color: rgba( 255, 255, 255, 0.5 );
+        width: 100%;
+        height: 32px;
+        position: absolute;
     }
 }
