fixing some styles in the node screen

--- a/source/java/admin-webapp/src/styles/sass/_variables.scss
+++ b/source/java/admin-webapp/src/styles/sass/_variables.scss
@@ -30,8 +30,10 @@ $fds_extra_light_green: #59A6FF;
 $fds_dark_gray: #999999;
 
 /* Alert colors */
-$green: #68BC1D;
+$green: #68C000;
+$yellow_green: #C0DF00;
 $yellow: #F5D200;
+$orange: #FD8D00;
 
 /* Dimensions
 ================= */
