--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -29,11 +29,11 @@
 @import 'components/forms/snapshotforms';
 @import 'components/comingsoon';
 
-@import 'nodes/index';
 @import 'admin/index';
 @import 'volumes/index';
 @import 'volumes/new';
 @import 'volumes/view';
+@import 'system/system';
 @import 'status/index';
 @import 'account/index';
 
