styling the add node screen

--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -62,6 +62,7 @@
 @import '../../scripts/directives/widgets/datetimetyper/datetimetyper';
 @import '../../scripts/directives/angular-fui/fui-input/fui-input';
 @import '../../scripts/directives/widgets/buttonbar/buttonbar';
+@import '../../scripts/directives/widgets/switch/switch';
 @import '../../scripts/directives/widgets/navitem/navitem';
 @import '../../scripts/directives/widgets/slider/slider';
 @import '../../scripts/directives/widgets/priorityslider/priority_slider';
