--- a/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
+++ b/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
@@ -95,6 +95,7 @@ table.volumes {
 
   .priority {
     text-align: center;
+    padding: 0px;
   }
     
   td.volume_time {
@@ -122,6 +123,7 @@ table.volumes {
     
   td.firebreak {
       text-align: center;
+      padding: 0px;
   }
 
   td.usage {
