fixing the javascript side and styling

--- a/source/java/admin-webapp/src/styles/sass/system/_system.scss
+++ b/source/java/admin-webapp/src/styles/sass/system/_system.scss
@@ -11,4 +11,13 @@
     .state-down {
         color: $orange;
     }
+    
+    .process-width {
+        width: 112px;
+        text-align: center;
+    }
+    
+    .process-cell {
+        padding: 0px;
+    }
 }
