adding small unit test fo rthe node page

--- a/source/java/admin-webapp/src/styles/sass/system/_system.scss
+++ b/source/java/admin-webapp/src/styles/sass/system/_system.scss
@@ -12,6 +12,10 @@
         color: $orange;
     }
     
+    .state-issues {
+        color: $yellow_green;
+    }
+    
     .process-width {
         width: 112px;
         text-align: center;
