fixing some issues in the node presentation

--- a/source/java/admin-webapp/src/styles/sass/system/_system.scss
+++ b/source/java/admin-webapp/src/styles/sass/system/_system.scss
@@ -1,5 +1,9 @@
 .nodecontainer {
     
+    .nodes {
+        clear: both;
+    }
+    
     .state-unknown {
         color: $text_very_light_color;
     }
