--- a/source/java/admin-webapp/src/styles/sass/system/_system.scss
+++ b/source/java/admin-webapp/src/styles/sass/system/_system.scss
@@ -27,5 +27,14 @@
     
     .process-cell {
         padding: 0px;
+        
+        .remove{
+            color: $fds_dark_gray;
+            
+            &:hover {
+                cursor: pointer;
+                color: red;                
+            }
+        }
     }
 }
