--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -427,6 +427,8 @@ fds: {
         token_factor=8
         replica_factor=4
         placement_algo="ConsistHash"
+        default_iops_min=0
+        default_iops_max=0
 
         web_dir="../lib/admin-webapp/"
         http_port=7777
