Make daemonize SM configurable.  Mainly used for manual testing.

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -224,6 +224,9 @@ fds: {
         /* verify data in background */
         data_verify_background = {{ sm_data_verify_background }}
 
+        /* daemonize or not */
+        daemonize=true
+
         objectstore: {
             /* Size of the hashed task synchronizer */
             synchronizer_size = 100
