creating a bodyless demo

--- a/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/_waterfallslider.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/_waterfallslider.scss
@@ -83,7 +83,7 @@ $waterfall-slider-row-height: 38px;
                 position: absolute;
                 top: 10px;
                 height: 10px;
-                background-image: url('../images/Blue-dot.svg');
+                background-image: url('../../images/Blue-dot.svg');
                 background-size: 10px 6px;
                 background-repeat: repeat-x;
                 pointer-events: none;
