--- a/source/java/admin-webapp/src/styles/sass/main/_mainshell.scss
+++ b/source/java/admin-webapp/src/styles/sass/main/_mainshell.scss
@@ -14,7 +14,7 @@
 
 .header-image {
     background: no-repeat left center;
-    background-image: url('../images/formation_data_systems.png');
+    background-image: url('../../images/formation_data_systems.png');
     width: 200px;
     height: $header_height;
     float: left;
