--- a/source/java/admin-webapp/src/styles/sass/login/_form.scss
+++ b/source/java/admin-webapp/src/styles/sass/login/_form.scss
@@ -9,7 +9,7 @@
 .logo {
     background: no-repeat center center;
 
-    @include image-2x('../images/formation_logo_4login', 'png', 366px, 94px );
+    @include image-2x('../../images/formation_logo_4login', 'png', 366px, 94px );
     width: 100%;
     height: 128px;
 }
