Test svc changes

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -54,6 +54,8 @@ fds: {
 {% else %}
          om_ip_list = "{{ empty_om_list }}"
 {% endif %}
+    om_port = 9999
+    om_uuid = 1
     }
 
     plat: {
