--- a/ansible/templates/influxdb/config.toml.j2
+++ b/ansible/templates/influxdb/config.toml.j2
@@ -3,7 +3,7 @@
 # If hostname (on the OS) doesn't return a name that can be resolved by the other
 # systems in the cluster, you'll have to set the hostname to an IP or something
 # that can be resolved here.
-# hostname = ""
+hostname = "{{ inventory_hostname }}"
 
 bind-address = "0.0.0.0"
 
@@ -142,8 +142,12 @@ map-size = "100g"
 # prior to shutting down. Any server can be pointed to
 # as a seed. It will find the Raft leader automatically.
 
-# Here's an example. Note that the port on the host is the same as the raft port.
-# seed-servers = ["hosta:8090","hostb:8090"]
+{% if inventory_hostname != groups['influxdb-hosts'][0] %}
+{% for host in groups['influxdb-hosts'] %}
+{% if loop.first %}seed-servers = [{% endif %}"{{ host }}:8090"{% if not loop.last %},{% endif %}{% if loop.last %}]{% endif %}
+{% endfor %}
+{% endif %}
+
 
 # Replication happens over a TCP connection with a Protobuf protocol.
 # This port should be reachable between all servers in a cluster.
