fixing the tests

--- a/source/java/admin-webapp/src/scripts/directives/widgets/mouseover/_mouseover.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/mouseover/_mouseover.scss
@@ -8,7 +8,7 @@
     z-index: 1000;
     
     .tooltip-body {
-        background-color: rgba( 255, 255, 255, 0.9 ) !important;
+        background-color: transparent;
     }
     
     .left-side {
