--- a/source/java/admin-webapp/src/styles/sass/volumes/_new.scss
+++ b/source/java/admin-webapp/src/styles/sass/volumes/_new.scss
@@ -39,7 +39,7 @@ nav.volume-nav {
       height: 140px;
     }
 
-    .volume-name {
+    .volume-name-input {
       display: inline-block;
       border: none;
       width: auto;
